--- a/index.css
+++ b/index.css
@@ -58,6 +58,7 @@ body > * {
 }
 
 .container {
+    width: 100%;
     max-width: 1176px;
 }
 
@@ -77,7 +78,7 @@ header div {
     max-width: 186px;
 }
 
-.search input {
+.search-input {
     max-width: 128px;
     font-family: 'Merriweather';
     font-style: italic;
@@ -89,7 +90,7 @@ header div {
     display: inline-block;
 }
 
-.search button {
+.search-button {
     width: 14px;
     height: 14px;
 }
@@ -104,7 +105,7 @@ header div {
     text-align: center;
 }
 
-.logo-bow-text {
+.logo .bow-text {
     position: relative;
     margin-bottom: -32px;
 }
@@ -115,23 +116,24 @@ header div {
     font-size: 64px;
 }
 
-a {
+.link {
     color: black;
     text-decoration: none;
 }
 
-.subscribe {
+header .link {
     font-size: 14px;
     font-family: 'Dosis';
     font-weight: 600;
 }
 
-.header-bottom {
+.navigation {
     display: flex;
     justify-content: space-between;
 }
 
-.header-bottom div {
+.navigation > * {
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
