--- a/index.css
+++ b/index.css
@@ -57,7 +57,7 @@ body > * {
     margin: 0 auto 0 auto;
 }
 
-.container {
+.header {
     width: 100%;
     max-width: 1176px;
 }
@@ -142,17 +142,17 @@ header .link {
     max-width: 775px;
 }
 
-.header-nav a {
+.header-nav .link {
     font-size: 14px;
     font-family: 'Myriad Pro';
     font-weight: 600;
 }
 
-.header-nav a:hover {
+.header-nav .link:hover {
     color: #ffd74a;
 }
 
-.header-contacts a {
+.header-contacts .link {
     margin-left: 20px;
 }
 
@@ -160,4 +160,146 @@ header .link {
     width: auto;
     max-width: 200px;
     float: right;
+}
+
+/*
+**************************************************************************
+*/
+
+.featured {
+    position: relative;
+    width: 100%;
+    height: 840px;
+    color: white;
+}
+
+.featured .background {
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background-image: url("images/first_section_bg.png");
+    overflow: hidden;
+}
+
+.background .skew {
+    margin-top: 14px;
+    width: 780px;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    clip-path: polygon(0 0%, 40% 0, 100% 100%, 0% 100%);
+}
+
+.featured .header {
+    position: relative;
+    left: 40px;
+    top: 150px;
+    width: fit-content;
+}
+
+.featured .header h {
+    font-family: "Bank Gothic";
+    font-size: 48px;
+}
+
+.featured .header div {
+    width: fit-content;
+    margin: 0 auto 0 auto;
+}
+
+.featured .header p {
+    margin-left: 8px;
+    display: inline;  
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.featured .article {
+    margin: 350px auto auto 40px;
+    width: fit-content;
+}
+
+.featured .article h {
+    display: block;
+    font-weight: 600px;
+    margin-bottom: 24px;
+}
+
+.arrow-button {
+    width: 50px;
+    height: 50px;
+    border-top: 1px solid white;
+    border-left: 1px solid white;
+    border-bottom: 1px solid white;   
+    border-right: 1px solid white;
+
+    background: url('images/button_arrow.png') no-repeat center;
+}
+
+.arrow-button:focus {
+    background-color: red;
+}
+
+.arrow-button-down {
+    transform: rotate(180deg);
+}
+
+.featured .content .left {
+    float: left;
+}
+
+.featured .content .right h {
+    font-size: 44px;
+    font-family: 'Zurichbt Black Extended';
+    margin: 0px;
+}
+
+.featured .content .right p {
+    margin: 0px;
+    font-size: 15px;
+    font-weight: 300;
+    margin-top: 8px;
+}
+
+.featured .content .right {
+    float: right;
+    margin: -8px 0 0 16px;
+    max-width: 500px;
+}
+
+.yellow-button {
+    position: relative;
+    font-family: 'Myriad Pro';
+    font-weight: bold;
+    text-transform: uppercase;
+ 
+    width: 160px;
+    height: 50px;
+    background: #ffc908;
+
+    border: none;
+}
+
+.yellow-button-arrow {
+    position: absolute;
+    top: -4px;
+    right: -4px;
+    width: 24px;
+    height: 24px;
+    background: url('images/yellow_button_arrow.png') no-repeat center;
+}
+
+.featured .right .yellow-button {
+    margin-top: 30px;
+    font-size: 18px;
+}
+
+.featured .selectors {
+    margin-top: 42px;
+}
+
+.featured .selectors .selector {
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
 }
