--- a/index.css
+++ b/index.css
@@ -1,4 +1,10 @@
 @font-face {
+    font-family: 'Pompiere';
+    font-style: normal;
+    src: local('Pompiere'), url('fonts/pompiere/Pompiere-Regular.otf'), format('otf');
+}
+
+@font-face {
     font-family: 'Myriad Pro';
     font-style: normal;
     src: local('Myriad Pro'), url('fonts/myriad_pro/MYRIADPRO-REGULAR.woff') format('woff');
@@ -86,11 +92,13 @@ header div {
     max-width: 186px;
 }
 
-.search-input {
+.input {
     max-width: 128px;
     font-family: 'Merriweather';
     font-style: italic;
     font-weight: 300;
+
+    border: none;
 }
 
 .search * {
@@ -214,9 +222,10 @@ header .link {
     width: fit-content;
 }
 
-.featured .header h {
+.featured .header h1 {
     font-family: "Bank Gothic";
     font-size: 48px;
+    margin-bottom: 0;
 }
 
 .featured .header div {
@@ -236,7 +245,7 @@ header .link {
     width: fit-content;
 }
 
-.featured .article h {
+.featured .article h1 {
     display: block;
     font-weight: 600;
     margin-bottom: 24px;
@@ -265,7 +274,7 @@ header .link {
     float: left;
 }
 
-.featured .content-right h {
+.featured .content-right h1 {
     font-size: 44px;
     font-family: 'Zurichbt Black Extended';
     margin: 0px;
@@ -351,7 +360,7 @@ header .link {
     text-align: center;
 }
 
-.about-left img {
+.map {
     margin-top: 45px;
 }
 
@@ -399,19 +408,89 @@ header .link {
     font-size: 24px;
 }
 
-.about-right {
+.about-newsletter {
+    margin-top: 32px;
+}
+
+.about-newsletter h1 {
+    font-family: 'Pompiere';
+    font-size: 41px;
+}
+
+.about-newsletter .input {
+    font-size: 20px;
+    width: 100%;
+    max-width: 256px;
+    text-align: center;
+
+    border-bottom: 1px solid black;
+}
+
+.about-newsletter .button {
+    margin: 48px auto 64px auto;
+    background-color: #a9b3e3;
+    color: white;
+    font-size: 20px;
+    width: 100%;
+}
+
+.about .about-right {
+    display: block;
     margin-left: 32px;
     max-width: 1200px;
+    height: 100%;
+}
+
+.about .about-right table {
     overflow: hidden;
+    table-layout: fixed;
+    width: 100%;
 }
 
 .about-right .shadowed-box {
     margin: 16px;
 }
 
-.wide-cell {
+.about-lifestyle img {
+    width: 100%;
+}
+
+.about-right .about-lifestyle {
+    margin-top: -48px;
+}
+
+.wide-post {
     width: 520px;
     padding: 0 128px 32px 40px;
+}
+
+.post-h1 {
+    position: relative;
+    width: 100%;;
+}
+
+.post-statistics {
+    font-weight: 400;
+    float: right;
+}
+
+.post-h1::first-line {
+    color: orange;
+    font-size: 32px;
+}
+
+.post-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.photo-post .post-footer {
+    margin-top: 32px;
+}
+
+.photo-post {
+    padding: 0 8px 32px 0;
 }
 
 .about .button {
@@ -420,11 +499,6 @@ header .link {
     font-weight: bold;
 
     display: inline;
-}
-
-.share {
-    display: inline;
-    margin: auto auto auto 64px;
 }
 
 .share p {
@@ -476,15 +550,16 @@ header .link {
     font-size: 30px;
 }
 
-.narrow-cell {
+.narrow-post {
     width: 512px;
     height: 608px;
 }
 
 .second-cell {
+    top: -32px;
     display: flex;
     flex-direction: row;
-    z-index: 1;
+    z-index: 5;
 }
 
 .second-cell, .fourth-cell {
@@ -492,12 +567,8 @@ header .link {
     z-index: 10;
 }
 
-.second-cell {
-    left: -64px;
-}
-
 .fourth-cell {
-    left: -256px;
+    left: -178px;
     padding-left: 200px;
     z-index: -1;
 }
@@ -516,4 +587,12 @@ header .link {
 
 .third-cell .background {
     z-index: 0;
+}
+
+/*
+**************************************************************************
+*/
+
+.categories {
+    background-color: lightgreen;
 }
